# caramia

./: .gitignore  .travis.yml  LICENSE  README.md  caramia.cabal  changelog.md  stack.yaml
demos/gl-info/: Main.hs
demos/memory-info/: Main.hs
demos/query-objects/: Main.hs
demos/smoke-test/: Main.hs
demos/textures/: Main.hs
flextgl/: README.md  profile
src/: Caramia.hs
src/Caramia/: Blend.hs  Buffer.hs  Color.hs  Context.hs  Framebuffer.hs  ImageFormats.hs  Math.hs  Memory.hs  Prelude.hs  Render.hs  Resource.hs  Shader.hs  Sync.hs  Texture.hs  VAO.hs
src/Caramia/Blend/: Internal.hs
src/Caramia/Buffer/: Internal.hs
src/Caramia/Framebuffer/: Internal.hs
src/Caramia/ImageFormats/: Internal.hs
src/Caramia/Internal/: ContextLocalData.hs  FlextGL.hs  Lens.hs  OpenGLCApi.hs  OpenGLDebug.hs  OpenGLExtensions.hs  Safe.hs
src/Caramia/Render/: Internal.hs
src/Caramia/Shader/: Internal.hs
src/Caramia/Texture/: Internal.hs
src/Caramia/VAO/: Internal.hs
src/Graphics/: Caramia.hs
src/Graphics/Caramia/: Blend.hs  Buffer.hs  Color.hs  Context.hs  Framebuffer.hs  ImageFormats.hs  Math.hs  Memory.hs  OpenGLResource.hs  Prelude.hs  Query.hs  Render.hs  Resource.hs  Shader.hs  Sync.hs  Texture.hs  VAO.hs
src/Graphics/Caramia/Blend/: Internal.hs
src/Graphics/Caramia/Buffer/: Internal.hs
src/Graphics/Caramia/Context/: Internal.hs
src/Graphics/Caramia/Framebuffer/: Internal.hs
src/Graphics/Caramia/ImageFormats/: Internal.hs
src/Graphics/Caramia/Internal/: ContextLocalData.hs  Exception.hs  FlextGL.hs  FlextGLEnums.hs  FlextGLFlipped.hs  FlextGLFuntypes.hs  FlextGLReader.hs  FlextGLReentrant.hs  FlextGLTypes.hs  Lens.hs  OpenGLCApi.hs  OpenGLDebug.hs  OpenGLVersion.hs  TexStorage.hs
src/Graphics/Caramia/Render/: Internal.hs
src/Graphics/Caramia/Shader/: Internal.hs
src/Graphics/Caramia/Texture/: Internal.hs
src/Graphics/Caramia/VAO/: Internal.hs
src/Graphics/OpenGL/: Basic.hs  Extension.hs
src/Graphics/OpenGL/Extension/: AMD.hs  ANDROID.hs  ANGLE.hs  APPLE.hs  ARB.hs  ARM.hs  ATI.hs  DMP.hs  EXT.hs  FJ.hs  GREMEDY.hs  HP.hs  IBM.hs  IMG.hs  INGR.hs  INTEL.hs  KHR.hs  MESA.hs  MESAX.hs  NV.hs  NVX.hs  OES.hs  OML.hs  PGI.hs  QCOM.hs  REND.hs  S3.hs  SGI.hs  SGIS.hs  SGIX.hs  SUN.hs  SUNX.hs  ThreeDFX.hs  VIV.hs  WIN.hs
src/Graphics/OpenGL/Extension/AMD/: BlendMinmaxFactor.hs  Compressed3DCTexture.hs  CompressedATCTexture.hs  ConservativeDepth.hs  DebugOutput.hs  DepthClampSeparate.hs  DrawBuffersBlend.hs  GcnShader.hs  GpuShaderInt64.hs  InterleavedElements.hs  MultiDrawIndirect.hs  NameGenDelete.hs  OcclusionQueryEvent.hs  PerformanceMonitor.hs  PinnedMemory.hs  ProgramBinaryZ400.hs  QueryBufferObject.hs  SamplePositions.hs  SeamlessCubemapPerTexture.hs  ShaderAtomicCounterOps.hs  ShaderStencilExport.hs  ShaderTrinaryMinmax.hs  SparseTexture.hs  StencilOperationExtended.hs  TextureTexture4.hs  TransformFeedback3LinesTriangles.hs  TransformFeedback4.hs  VertexShaderLayer.hs  VertexShaderTessellator.hs  VertexShaderViewportIndex.hs
src/Graphics/OpenGL/Extension/ANDROID/: ExtensionPackEs31a.hs
src/Graphics/OpenGL/Extension/ANGLE/: DepthTexture.hs  FramebufferBlit.hs  FramebufferMultisample.hs  InstancedArrays.hs  PackReverseRowOrder.hs  ProgramBinary.hs  TextureCompressionDxt3.hs  TextureCompressionDxt5.hs  TextureUsage.hs  TranslatedShaderSource.hs
src/Graphics/OpenGL/Extension/APPLE/: AuxDepthStencil.hs  ClientStorage.hs  ClipDistance.hs  ColorBufferPackedFloat.hs  CopyTextureLevels.hs  ElementArray.hs  Fence.hs  FloatPixels.hs  FlushBufferRange.hs  FramebufferMultisample.hs  ObjectPurgeable.hs  Rgb422.hs  RowBytes.hs  SpecularVector.hs  Sync.hs  Texture2DLimitedNpot.hs  TextureFormatBGRA8888.hs  TextureMaxLevel.hs  TexturePackedFloat.hs  TextureRange.hs  TransformHint.hs  VertexArrayObject.hs  VertexArrayRange.hs  VertexProgramEvaluators.hs  Ycbcr422.hs
src/Graphics/OpenGL/Extension/ARB/: ArraysOfArrays.hs  BaseInstance.hs  BindlessTexture.hs  BlendFuncExtended.hs  BufferStorage.hs  ClEvent.hs  ClearBufferObject.hs  ClearTexture.hs  ClipControl.hs  ColorBufferFloat.hs  Compatibility.hs  CompressedTexturePixelStorage.hs  ComputeShader.hs  ComputeVariableGroupSize.hs  ConditionalRenderInverted.hs  ConservativeDepth.hs  CopyBuffer.hs  CopyImage.hs  CullDistance.hs  DebugOutput.hs  DepthBufferFloat.hs  DepthClamp.hs  DepthTexture.hs  DerivativeControl.hs  DirectStateAccess.hs  DrawBuffers.hs  DrawBuffersBlend.hs  DrawElementsBaseVertex.hs  DrawIndirect.hs  DrawInstanced.hs  ES2Compatibility.hs  ES31Compatibility.hs  ES3Compatibility.hs  EnhancedLayouts.hs  ExplicitAttribLocation.hs  ExplicitUniformLocation.hs  FragmentCoordConventions.hs  FragmentLayerViewport.hs  FragmentProgram.hs  FragmentProgramShadow.hs  (+114 more)
src/Graphics/OpenGL/Extension/ARM/: MaliProgramBinary.hs  MaliShaderBinary.hs  Rgba8.hs  ShaderFramebufferFetch.hs  ShaderFramebufferFetchDepthStencil.hs
src/Graphics/OpenGL/Extension/ATI/: DrawBuffers.hs  ElementArray.hs  EnvmapBumpmap.hs  FragmentShader.hs  MapObjectBuffer.hs  Meminfo.hs  PixelFormatFloat.hs  PnTriangles.hs  SeparateStencil.hs  TextFragmentShader.hs  TextureEnvCombine3.hs  TextureFloat.hs  TextureMirrorOnce.hs  VertexArrayObject.hs  VertexAttribArrayObject.hs  VertexStreams.hs
src/Graphics/OpenGL/Extension/DMP/: ProgramBinary.hs  ShaderBinary.hs
src/Graphics/OpenGL/Internal/: Scope.hs  Shared.hs
src/Graphics/OpenGL/Profile/: Compatibility32.hs  Compatibility33.hs  Compatibility40.hs  Compatibility41.hs  Compatibility42.hs  Compatibility43.hs  Compatibility44.hs  Compatibility45.hs  Core32.hs  Core33.hs  Core40.hs  Core41.hs  Core42.hs  Core43.hs  Core44.hs  Core45.hs  Embedded20.hs  Embedded30.hs  Embedded31.hs  EmbeddedCommon10.hs  EmbeddedCommon11.hs  EmbeddedLite10.hs  EmbeddedLite11.hs  Standard10.hs  Standard11.hs  Standard12.hs  Standard13.hs  Standard14.hs  Standard15.hs  Standard20.hs  Standard21.hs  Standard30.hs  Standard31.hs
src/c/: gl_api.c  gl_api.h  gl_debug_mode.c  gl_debug_mode_osx.c
tests/buffer/: Main.hs
tests/color/: Main.hs
tests/shader/: Main.hs
tests/texture/: Main.hs
(+436 files in other folders)
