name:                caramia
version:             0.1.0.0
synopsis:            Caramia real-time hardware-accelerated rendering library
homepage:            https://github.com/Noeda/caramia/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
copyright:           Copyright (c) 2014 Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Graphics
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

description:
    (See README.md in the repository for a more comprehensive description).

    These are low-level, but Haskelly bindings to OpenGL 3.3.

source-repository head
    type:            git
    location:        https://github.com/Noeda/caramia.git

library
  exposed-modules:     Caramia
                       Caramia.Resource
                       Caramia.Context
                       Caramia.Buffer
                       Caramia.VAO
                       Caramia.Shader
                       Caramia.Math
                       Caramia.ImageFormats
                       Caramia.Render
                       Caramia.Texture
                       Caramia.Memory
                       Caramia.Framebuffer
                       Caramia.Color
                       Caramia.Blend
                       Caramia.Prelude
  other-modules:       Caramia.Internal.OpenGLCApi
                       Caramia.Internal.OpenGLExtensions
                       Caramia.Internal.Lens
                       Caramia.Render.Internal
                       Caramia.Framebuffer.Internal
                       Caramia.Texture.Internal
                       Caramia.ImageFormats.Internal
                       Caramia.Shader.Internal
                       Caramia.Buffer.Internal
                       Caramia.Blend.Internal
                       Caramia.VAO.Internal
  c-sources:           src/c/gl_api.c

  ghc-options:         -Wall -fno-warn-name-shadowing

  build-depends:       base >=4.7 && <5.0.0.0
                      ,bytestring   >=0.10 && <1.0
                      ,containers   >=0.5 && <1.0
                      ,vector       >=0.10 && <1.0
                      ,OpenGLRaw    ==1.5.*
                      ,text         >=0.9 && <2.0
                      ,transformers >=0.3 && <1.0
                      ,semigroups   >=0.15 && <1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable, OverloadedStrings, FlexibleInstances
                      ,FlexibleContexts, LambdaCase, MultiWayIf, ViewPatterns
                      ,NoImplicitPrelude

-- This is just a dumping ground test that does stupid things. It's used to
-- check if things work at all.
test-suite smoke-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
  hs-source-dirs:      demos/smoke-test
  build-depends:       base, caramia
                      ,sdl2 ==1.*
                      ,text >=0.9 && <2.0
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable, OverloadedStrings
                      ,FlexibleInstances ,FlexibleContexts, LambdaCase
                      ,MultiWayIf

