name:                caramia
version:             0.1.0.0
synopsis:            Caramia real-time hardware-accelerated rendering library
homepage:            https://github.com/Noeda/caramia/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
copyright:           Copyright (c) 2014 Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Graphics
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10

description:
    (See README.md in the repository for a more comprehensive description).
    .
    These are medium-level, Haskelly bindings to OpenGL 3.3.
    .
    See 'giveContext' in "Caramia.Context" as this is the
    starting point for using this library.

source-repository head
    type:            git
    location:        https://github.com/Noeda/caramia.git

library
  exposed-modules:     Graphics.Caramia
                       Graphics.Caramia.Resource
                       Graphics.Caramia.Context
                       Graphics.Caramia.Buffer
                       Graphics.Caramia.VAO
                       Graphics.Caramia.Shader
                       Graphics.Caramia.Math
                       Graphics.Caramia.ImageFormats
                       Graphics.Caramia.Render
                       Graphics.Caramia.Texture
                       Graphics.Caramia.Memory
                       Graphics.Caramia.Framebuffer
                       Graphics.Caramia.Color
                       Graphics.Caramia.Blend
                       Graphics.Caramia.Prelude
                       Graphics.Caramia.Sync
                       Graphics.Caramia.Internal.ContextLocalData
                       Graphics.Caramia.Internal.OpenGLDebug
                       Graphics.Caramia.Internal.OpenGLCApi
                       Graphics.Caramia.Internal.Lens
                       Graphics.Caramia.Internal.FlextGL
                       Graphics.Caramia.Render.Internal
                       Graphics.Caramia.Framebuffer.Internal
                       Graphics.Caramia.Texture.Internal
                       Graphics.Caramia.ImageFormats.Internal
                       Graphics.Caramia.Shader.Internal
                       Graphics.Caramia.Buffer.Internal
                       Graphics.Caramia.Blend.Internal
                       Graphics.Caramia.VAO.Internal

  ghc-options:         -Wall -fno-warn-name-shadowing

  build-depends:       base >=4.6 && <5.0.0.0
                      ,bytestring   >=0.10 && <1.0
                      ,containers   >=0.5 && <1.0
                      ,vector       >=0.10 && <1.0
                      ,text         >=0.9 && <2.0
                      ,transformers >=0.4 && <1.0
                      ,semigroups   >=0.15 && <1.0
                      ,OpenGLRaw    >=1.5 && <2.0
  hs-source-dirs:      src
  default-language:    Haskell2010

  if os(darwin)
    frameworks: OpenGL
    cpp-options:       -DMAC_OPENGL

-- This is just a dumping ground test that does stupid things. It's used to
-- check if things work at all.
test-suite smoke-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
  hs-source-dirs:      demos/smoke-test
  build-depends:       base, caramia
                      ,sdl2 ==1.*
                      ,text >=0.9 && <2.0
  default-language:    Haskell2010

-- This one tests Caramia.Memory if it returns anything useful.
test-suite memory-info
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded
  hs-source-dirs:      demos/memory-info
  build-depends:       base, caramia
                      ,sdl2 ==1.*
  default-language:    Haskell2010

